@@ -33,8 +33,9 @@ view=View
 add=Add
 
 [ui.configuration]
-display=main,violation,trigger,instructions,fingerprint
+display=main,switches,violation,trigger,instructions,fingerprint
 violation=Violation
+switches=Switches
 trigger=Trigger
 fingerprint=Fingerprint
 main=Main
@@ -244,6 +245,19 @@ class=OS Class
 os=Operating System
 fingerprint=Fingerprint
 command=fingerprint view
+
+[ui.configuration.switches]
+display=ip,type,mode,uplink,SNMPVersion,communityRead,communityWrite,communityTrap,SNMPVersionTrap
+ip=IP
+type=Type
+mode=Mode
+uplink=Uplinks
+communityRead =SNMP Read Community
+communityWrite =SNMP Write Community
+SNMPVersion=SNMP Version
+communityTrap=SNMP Trap Community
+SNMPVersionTrap=SNMP Trap Version
+command=switchconfiguration view
 
 [ui.status.reports.openviolations]
 display=violation,owner,status,start_date,mac
