@@ -173,6 +173,7 @@
           (http://www.packetfence.org/mantis/view.php?id=544)
         Added SNMPVersion and SNMPVersionTrap checks
           (http://www.packetfence.org/mantis/view.php?id=543)
+        Added view on switches.conf to web admin GUI
 
 1.7.6
         violations created through bin/pfdetect do not lead to 
